--- a/article.html
+++ b/article.html
@@ -2,12 +2,13 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/styles.scss">
 	<title>Mi-Session</title>
 </head>
 <body>
 	<div class="interface">
-        <nav>
+        <nav class="menu">
             <li><a href="/html/">Recettes</a> </li>
             <li><a href="/html/">Accords mets-vins</a> </li>
             <li><a href="/html/">Accords mets-bières</a> </li>
