renommer les dossiers

--- a/article.html
+++ b/article.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="css/styles.scss">
+	<link rel="stylesheet" href="_base/_mixin.scss">
+	<link rel="stylesheet" href="_base/_variables.scss">
 	<title>Mi-Session</title>
 </head>
 <body>
