--- a/article.html
+++ b/article.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="fr">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="_base/_mixin.scss">
 	<link rel="stylesheet" href="_base/_variables.scss">
@@ -13,6 +15,7 @@
 
 		<header>
             <nav class="menu">
+                <a href="/html/"></a><span class="material-icons">menu</span></a>
                 <li><a href="/html/">Recettes</a> </li>
                 <li><a href="/html/">Accords mets-vins</a> </li>
                 <li><a href="/html/">Accords mets-bières</a> </li>
@@ -23,7 +26,7 @@
 			<img src="" alt="">
         </header>
 
-        <div><h1>Collaboration spéciale</h1></div>
+        <div class="entete"><h1>Collaboration spéciale</h1></div>
 
         <aside> 
             <section class="Auteur">
