--- a/article.html
+++ b/article.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="_base/_mixin.scss">
 	<link rel="stylesheet" href="_base/_variables.scss">
@@ -26,7 +27,7 @@
 			<img src="" alt="">
         </header>
 
-        <div class="entete"><h1>Collaboration spéciale</h1></div>
+        
 
         <aside> 
             <section class="Auteur">
@@ -40,8 +41,13 @@
         </aside>
 		<section>
             <article class="principal">
-                <h2>Le Potluck, recevoir sans se casser la tête </h2>
-                <p>Art de recevoir</p>
+                <div class="entete"><h1>Collaboration spéciale</h1></div>
+                
+                <section class="titre">
+                    <h2>Le Potluck, recevoir sans se casser la tête </h2>
+                    <p class="sectionMenu">Art de recevoir</p>
+                </section>
+                <img src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere ante id aliquet tincidunt. Praesent dignissim non metus a sollicitudin. Mauris aliquam sed leo et fringilla. Suspendisse ut tellus sodales, sodales turpis ut, varius elit. Suspendisse cursus justo vitae odio elementum, id aliquam tellus vestibulum.</p>
             </article>
             <article>
