--- a/article.html
+++ b/article.html
@@ -47,8 +47,8 @@
                     <h2>Le Potluck, recevoir sans se casser la tête </h2>
                     <p class="sectionMenu">Art de recevoir</p>
                 </section>
-                <img src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere ante id aliquet tincidunt. Praesent dignissim non metus a sollicitudin. Mauris aliquam sed leo et fringilla. Suspendisse ut tellus sodales, sodales turpis ut, varius elit. Suspendisse cursus justo vitae odio elementum, id aliquam tellus vestibulum.</p>
+                <img class ="manShapeMobile" src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
+                <p class="pEntete">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere ante id aliquet tincidunt. Praesent dignissim non metus a sollicitudin. Mauris aliquam sed leo et fringilla. Suspendisse ut tellus sodales, sodales turpis ut, varius elit. Suspendisse cursus justo vitae odio elementum, id aliquam tellus vestibulum.</p>
             </article>
             <article>
                 <h3>L'origine du mot "potluck"</h3>
