--- a/article.html
+++ b/article.html
@@ -68,24 +68,24 @@
                 <h3>Des suggestions de plats à apporter</h3>
                 <p>Morbi neque ante, porttitor at nisi eu, hendrerit venenatis sapien. Suspendisse potenti. Etiam volutpat facilisis leo ac facilisis. Praesent sit amet odio in nunc eleifend cursus gravida sit amet libero.</p>
                 <p>Integer eu convallis eros, eget viverra justo. Phasellus sagittis in nisi quis vulputate. Phasellus semper erat hendrerit porttitor cursus. Mauris eget arcu dapibus, rhoncus nulla vel, malesuada turpis. Nam congue convallis eros non luctus. Etiam suscipit malesuada risus, nec semper massa aliquet at. Ut venenatis consequat dapibus.</p>
-                <section>
+                <section class="saladeCrevette">
                     <img class="recette" src="foodiesImg/articleRecette_1-assets/photo-480.jpg" alt="">
                     <h4>Salade de crevettes de saison</h4>
                     <p>Eleifend sit amet ipsum quis, aliquam luctus neque. In vitae justo ut risus volutpat accumsan sed nec est. Nunc leo arcu, porttitor eget turpis ac, consequat porttitor risus. Mauris porttitor tristique eros, non dictum purus aliquet nec.</p>
-                <input type="text">
+                    <a href="#"><p>Consulter la recette</p></a>
                 </section>
-                <section>
+                <section class="saladeTomate">
                     <img class="recette" src="foodiesImg/articleRecette_2-assets/photo-480.jpg" alt="">
                     <h4>Une salade de tomates fraîches</h4>
                     <p>Porta vitae magna eget, vestibulum molestie lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                     <p>Cras laoreet sagittis risus, eu luctus nibh accumsan sed. Nunc neque nisl, imperdiet nec nibh quis, luctus luctus sem. Suspendisse gravida ipsum eu velit pharetra, non suscipit ipsum dignissim. In aliquam maximus nisl, a commodo ipsum dictum ut. Etiam placerat, nisi vel facilisis dapibus, nisl sapien pellentesque velit, sit amet gravida est dolor aliquam lectus.</p>
-                    <input type="text">
+                    <a href="#"><p>Consulter la recette</p></a>
                 </section>
-                <section>
+                <section class="sandwich">
                     <img class="recette" src="foodiesImg/articleRecette_3-assets/photo-480.jpg" alt="">
                     <h4>De petits sandwichs tout simples</h4>
                     <p>Eleifend sit amet ipsum quis, aliquam luctus neque. In vitae justo ut risus volutpat accumsan sed nec est. Nunc leo arcu, porttitor eget turpis ac, consequat porttitor risus. Mauris porttitor tristique eros, non dictum purus aliquet nec.</p>
-                    <input type="text">
+                    <a href="#"><p>Consulter la recette</p></a>
                 </section>
             </article>
 		</section>
