--- a/article.html
+++ b/article.html
@@ -90,6 +90,6 @@
             </article>
 		</section>
 	</div>
-	<footer><div class="copyright">©CSTJ | Techniques d'intégration multimédia 2020 - travail de mi-session</div></footer>
+	<footer><div class="copyright">©CSTJ | Techniques d'intégration multimédia 2020<br/>travail de mi-session</div></footer>
 </body>
 </html>
