--- a/article.html
+++ b/article.html
@@ -16,7 +16,7 @@
 
 		<header>
             <nav class="menu"> <source sizes="" srcset="" type="image/">
-                <a href="#"></a><span class="material-icons">menu</span></a>
+                <a href="#"></a><i class="material-icons">menu</i></a>
                 <li><a href="#">Recettes</a> </li>
                 <li><a href="#">Accords mets-vins</a> </li>
                 <li><a href="#">Accords mets-bières</a> </li>
@@ -49,13 +49,19 @@
                 <img class ="manShapeMobile" src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
                 <p class="pEntete">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere ante id aliquet tincidunt. Praesent dignissim non metus a sollicitudin. Mauris aliquam sed leo et fringilla. Suspendisse ut tellus sodales, sodales turpis ut, varius elit. Suspendisse cursus justo vitae odio elementum, id aliquam tellus vestibulum.</p>
             </article>
-            <img class="pub" src="foodiesImg/publicite/pub1.svg" alt="">
+            
             <article class="origine">
+                <img class="pub" src="foodiesImg/publicite/pub1.svg" alt="">
                 <h3>L'origine du mot "potluck"</h3>
                 <p>Quisque viverra ligula at elit imperdiet pretium. Vestibulum dapibus eleifend quam, eu posuere dolor venenatis vel. Morbi finibus nisl at vehicula rutrum. Vivamus at viverra sapien. Sed consectetur eget ipsum facilisis pharetra. Nulla facilisi. Pellentesque interdum orci ipsum, ac fringilla nunc scelerisque id. Etiam sodales enim in finibus cursus. Mauris mollis feugiat sem ac consequat. Morbi vitae turpis ornare, pulvinar leo et, blandit orci. Fusce arcu lorem, pharetra id sagittis non, hendrerit in ligula.</p>
             </article>
-            <img class="pub" src="foodiesImg/publicite/pub2.svg" alt="">
+
+
             <article class="bonheur">
+                <div class="pub">
+                <img class="pub" src="foodiesImg/publicite/pub2.svg" alt="">
+                <img class="pub3" src="foodiesImg/publicite/pub3.svg" alt="">
+                </div>
                 <h3>Du bonheur à partager en famille et entre amis</h3>
                 <figure>
                     <img src="foodiesImg/articleRecette-assets/photo-480.jpg" alt="articleRecette">
@@ -63,7 +69,7 @@
                 </figure>
                 <p>Integer tristique magna eu neque convallis, a efficitur ipsum rutrum. Vivamus bibendum lobortis orci, a dictum diam semper id. Etiam scelerisque, dolor at ultrices porttitor, nibh nisl laoreet lorem, ac pharetra diam justo non magna. Sed nec varius lorem, non rhoncus lacus. Aliquam tristique sodales tortor vitae euismod. Quisque pulvinar orci purus, eget vulputate erat feugiat a. Mauris rhoncus tristique ornare. Vivamus pulvinar lacinia velit eu sagittis.</p>
             </article>
-            <img class="pub" src="foodiesImg/publicite/pub3.svg" alt="">
+            
             <article class="recette">
                 <h3>Des suggestions de plats à apporter</h3>
                 <p>Morbi neque ante, porttitor at nisi eu, hendrerit venenatis sapien. Suspendisse potenti. Etiam volutpat facilisis leo ac facilisis. Praesent sit amet odio in nunc eleifend cursus gravida sit amet libero.</p>
