--- a/article.html
+++ b/article.html
@@ -2,9 +2,14 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet">
+    <!-- jQuery  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery. min.js"></script>
+    <!-- Animate CSS :  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs /animate. css/3.7.2/animate.min.css">
+    <!-- menu burger -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2 /css/ all.min.css" rel="stylesheet">
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="_base/_mixin.scss">
 	<link rel="stylesheet" href="_base/_variables.scss">
@@ -16,13 +21,15 @@
 
 		<header>
             <nav class="menu"> <source sizes="" srcset="" type="image/">
-                <a href="#"></a><i class="material-icons">menu</i></a>
-                <li><a href="#">Recettes</a> </li>
-                <li><a href="#">Accords mets-vins</a> </li>
-                <li><a href="#">Accords mets-bières</a> </li>
-                <li><a href="#">Frootrotter</a> </li>
-                <li><a href="#">Coup de food</a> </li>
-                <li><a href="#">Art de recevoir </a> </li>
+                <a href="#"></a><i class="fas fa-bars"></i></a>
+                <ul>
+                    <li><img src="foodiesImg/icone/menu.svg" alt="menu"><a href="#">Recettes</a> </li>
+                    <li><img src="foodiesImg/icone/wine.svg" alt="vin"><a href="#">Accords mets-vins</a> </li>
+                    <li><img src="foodiesImg/icone/beer.svg" alt="beer"><a href="#">Accords mets-bières</a> </li>
+                    <li><img src="foodiesImg/icone/camion.svg" alt="camion"><a href="#">Frootrotter</a> </li>
+                    <li><img src="foodiesImg/icone/recettes.svg" alt="coup de coeur"><a href="#">Coup de food</a> </li>
+                    <li><img src="foodiesImg/icone/guest.svg" alt="invite"><a href="#">Art de recevoir </a> </li>
+                </ul>
             </nav>
 			<img src="foodiesImg/logo/logo.svg" alt="logo">
         </header>
