--- a/article.html
+++ b/article.html
@@ -7,7 +7,7 @@
     <!-- Animate CSS :  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs /animate. css/3.7.2/animate.min.css">
     <!-- menu burger -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2 /css/ all.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/64703e692a.js" crossorigin="anonymous"></script>
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
@@ -20,8 +20,8 @@
         
 
 		<header>
-            <nav class="menu"> <source sizes="" srcset="" type="image/">
-                <a href="#"></a><i class="fas fa-bars"></i></a>
+            <a href="#"><i class="fas fa-bars menuMobile"></i></a>
+            <nav class="menu"> 
                 <ul>
                     <li><img src="foodiesImg/icone/menu.svg" alt="menu"><a href="#">Recettes</a> </li>
                     <li><img src="foodiesImg/icone/wine.svg" alt="vin"><a href="#">Accords mets-vins</a> </li>
