--- a/article.html
+++ b/article.html
@@ -20,8 +20,8 @@
         
 
 		<header>
-            <a href="#"><i class="fas fa-bars menuMobile"></i></a>
-            <nav class="menu"> 
+            <i class="fas fa-bars menuMobile"  tabindex="0"></i>
+            <nav class="nav-principale nav-principale-close"> 
                 <ul>
                     <li><img src="foodiesImg/icone/menu.svg" alt="menu"><a href="#">Recettes</a> </li>
                     <li><img src="foodiesImg/icone/wine.svg" alt="vin"><a href="#">Accords mets-vins</a> </li>
