--- a/article.html
+++ b/article.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/64703e692a.js" crossorigin="anonymous"></script>
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styleCSS/style.css">
 	<link rel="stylesheet" href="_base/_mixin.scss">
 	<link rel="stylesheet" href="_base/_variables.scss">
 	<title>Mi-Session</title>
@@ -23,12 +23,12 @@
             <i class="fas fa-bars menuMobile"  tabindex="0"></i>
             <nav class="nav-principale"> 
                 <ul>
-                    <li><img src="foodiesImg/icone/menu.svg" alt="menu"><a href="#">Recettes</a> </li>
-                    <li><img src="foodiesImg/icone/wine.svg" alt="vin"><a href="#">Accords mets-vins</a> </li>
-                    <li><img src="foodiesImg/icone/beer.svg" alt="beer"><a href="#">Accords mets-bières</a> </li>
-                    <li><img src="foodiesImg/icone/camion.svg" alt="camion"><a href="#">Frootrotter</a> </li>
-                    <li><img src="foodiesImg/icone/recettes.svg" alt="coup de coeur"><a href="#">Coup de food</a> </li>
-                    <li><img src="foodiesImg/icone/guest.svg" alt="invite"><a href="#">Art de recevoir </a> </li>
+                    <li><a href="#">Recettes</a> </li>
+                    <li><a href="#">Accords mets-vins</a> </li>
+                    <li><a href="#">Accords mets-bières</a> </li>
+                    <li><a href="#">Frootrotter</a> </li>
+                    <li><a href="#">Coup de food</a> </li>
+                    <li><a href="#">Art de recevoir </a> </li>
                 </ul>
             </nav>
 			<img src="foodiesImg/logo/logo.svg" alt="logo">
