--- a/article.html
+++ b/article.html
@@ -5,14 +5,15 @@
     <!-- jQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- Animate CSS :  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs /animate. css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!-- menu burger -->
     <script src="https://kit.fontawesome.com/64703e692a.js" crossorigin="anonymous"></script>
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styleCSS/style.css">
 	<link rel="stylesheet" href="_base/_mixin.scss">
-	<link rel="stylesheet" href="_base/_variables.scss">
+    <link rel="stylesheet" href="_base/_variables.scss">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 	<title>Mi-Session</title>
 </head>
 <body>
@@ -53,21 +54,24 @@
                     <h2>Le Potluck, recevoir sans se casser la tête </h2>
                     <p class="sectionMenu">Art de recevoir</p>
                 </section>
+                <img class ="manShape" src="/foodiesImg/icone/manShape.svg" alt="man-shape">
                 <img class ="manShapeMobile" src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
                 <p class="pEntete">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere ante id aliquet tincidunt. Praesent dignissim non metus a sollicitudin. Mauris aliquam sed leo et fringilla. Suspendisse ut tellus sodales, sodales turpis ut, varius elit. Suspendisse cursus justo vitae odio elementum, id aliquam tellus vestibulum.</p>
             </article>
             
             <article class="origine">
-                <img class="pub" src="foodiesImg/publicite/pub1.svg" alt="">
-                <h3>L'origine du mot "potluck"</h3>
-                <p>Quisque viverra ligula at elit imperdiet pretium. Vestibulum dapibus eleifend quam, eu posuere dolor venenatis vel. Morbi finibus nisl at vehicula rutrum. Vivamus at viverra sapien. Sed consectetur eget ipsum facilisis pharetra. Nulla facilisi. Pellentesque interdum orci ipsum, ac fringilla nunc scelerisque id. Etiam sodales enim in finibus cursus. Mauris mollis feugiat sem ac consequat. Morbi vitae turpis ornare, pulvinar leo et, blandit orci. Fusce arcu lorem, pharetra id sagittis non, hendrerit in ligula.</p>
+                <div class="pub1"><p>publicité</p></div>
+                <div class="origineTexte">
+                    <h3>L'origine du mot "potluck"</h3>
+                    <p>Quisque viverra ligula at elit imperdiet pretium. Vestibulum dapibus eleifend quam, eu posuere dolor venenatis vel. Morbi finibus nisl at vehicula rutrum. Vivamus at viverra sapien. Sed consectetur eget ipsum facilisis pharetra. Nulla facilisi. Pellentesque interdum orci ipsum, ac fringilla nunc scelerisque id. Etiam sodales enim in finibus cursus. Mauris mollis feugiat sem ac consequat. Morbi vitae turpis ornare, pulvinar leo et, blandit orci. Fusce arcu lorem, pharetra id sagittis non, hendrerit in ligula.</p>
+                </div>
             </article>
 
 
             <article class="bonheur">
                 <div class="pub">
-                <img class="pub" src="foodiesImg/publicite/pub2.svg" alt="">
-                <img class="pub3" src="foodiesImg/publicite/pub3.svg" alt="">
+                    <div class="pub2"><p>publicité</p></div>
+                    <div class="pub3"><p>publicité</p></div>
                 </div>
                 <h3>Du bonheur à partager en famille et entre amis</h3>
                 <figure>
@@ -79,8 +83,8 @@
             
             <article class="recette">
                 <h3>Des suggestions de plats à apporter</h3>
-                <p>Morbi neque ante, porttitor at nisi eu, hendrerit venenatis sapien. Suspendisse potenti. Etiam volutpat facilisis leo ac facilisis. Praesent sit amet odio in nunc eleifend cursus gravida sit amet libero.</p>
-                <p>Integer eu convallis eros, eget viverra justo. Phasellus sagittis in nisi quis vulputate. Phasellus semper erat hendrerit porttitor cursus. Mauris eget arcu dapibus, rhoncus nulla vel, malesuada turpis. Nam congue convallis eros non luctus. Etiam suscipit malesuada risus, nec semper massa aliquet at. Ut venenatis consequat dapibus.</p>
+                <p class="premierP">Morbi neque ante, porttitor at nisi eu, hendrerit venenatis sapien. Suspendisse potenti. Etiam volutpat facilisis leo ac facilisis. Praesent sit amet odio in nunc eleifend cursus gravida sit amet libero.</p>
+                <p class="premierP">Integer eu convallis eros, eget viverra justo. Phasellus sagittis in nisi quis vulputate. Phasellus semper erat hendrerit porttitor cursus. Mauris eget arcu dapibus, rhoncus nulla vel, malesuada turpis. Nam congue convallis eros non luctus. Etiam suscipit malesuada risus, nec semper massa aliquet at. Ut venenatis consequat dapibus.</p>
                 <section class="saladeCrevette">
                     <img class="recette" src="foodiesImg/articleRecette_1-assets/photo-480.jpg" alt="">
                     <h4>Salade de crevettes de saison</h4>
