--- a/article.html
+++ b/article.html
@@ -107,11 +107,10 @@
             </article>
 		</section>
 	</div>
-	<footer><div class="copyright">©CSTJ | Techniques d'intégration multimédia 2020<br/>travail de mi-session</div></footer>
-    <!-- //* * * * * * * * * * * * * * * * * * * * * * * * * * * *
-    * Gestion des évènements d'interaction
-    * 
-    */ -->
+	<footer>
+        <div class="copyright">©CSTJ | Techniques d'intégration multimédia 2020<br/>travail de <mi-session></mi-session></div>
+    </footer>
+    
     <script>
 
    $(function(){
