--- a/article.html
+++ b/article.html
@@ -36,16 +36,16 @@
         </header>
 
         
-
+        <main>
         <aside> 
             <section class="Auteur">
-                <img src="" alt="man-shape">
-                <p></p>
-                <p></p>
+                <img src="foodiesImg/icone/manShape.svg" alt="man-shape">
+                <p class="prenom">Prénom</p>
+                <p class="famille">Nom de famille</p>
             </section>  
-            <img src="foodiesImg/publicite/pub1.svg" alt="publicité">
-            <img src="foodiesImg/publicite/pub1.svg" alt="publicité">
-            <img src="foodiesImg/publicite/pub1.svg" alt="publicité">
+            <div>publicité</div>
+            <div>publicité</div>
+            <div>publicité</div>
         </aside>
 		<section class="article">
             <article class="principal">
@@ -105,10 +105,11 @@
                     <a href="#"><p>Consulter la recette</p></a>
                 </section>
             </article>
-		</section>
+        </section>
+    </main>
 	</div>
 	<footer>
-        <div class="copyright">©CSTJ | Techniques d'intégration multimédia 2020<br/>travail de <mi-session></mi-session></div>
+        <div class="copyright">©CSTJ | Techniques d'intégration multimédia 2020<br/>travail de mi-session</mi-session></div>
     </footer>
     
     <script>
