--- a/article.html
+++ b/article.html
@@ -45,7 +45,6 @@
             </section>  
             <div>publicité</div>
             <div>publicité</div>
-            <div>publicité</div>
         </aside>
 		<section class="article">
             <article class="principal">
@@ -55,7 +54,11 @@
                     <p class="sectionMenu">Art de recevoir</p>
                 </section>
                 <img class ="manShape" src="/foodiesImg/icone/manShape.svg" alt="man-shape">
-                <img class ="manShapeMobile" src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
+                <div>
+                    <img class ="manShapeMobile" src="/foodiesImg/icone/manShapeMobile.svg" alt="man-shape">
+                    <p class="prenom">Prénom</p>
+                    <p class="famille">Nom de famille</p>
+                </div>
                 <p class="pEntete">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam posuere ante id aliquet tincidunt. Praesent dignissim non metus a sollicitudin. Mauris aliquam sed leo et fringilla. Suspendisse ut tellus sodales, sodales turpis ut, varius elit. Suspendisse cursus justo vitae odio elementum, id aliquam tellus vestibulum.</p>
             </article>
             
@@ -71,7 +74,6 @@
             <article class="bonheur">
                 <div class="pub">
                     <div class="pub2"><p>publicité</p></div>
-                    <div class="pub3"><p>publicité</p></div>
                 </div>
                 <h3>Du bonheur à partager en famille et entre amis</h3>
                 <figure>
@@ -87,22 +89,28 @@
                 <p class="premierP">Integer eu convallis eros, eget viverra justo. Phasellus sagittis in nisi quis vulputate. Phasellus semper erat hendrerit porttitor cursus. Mauris eget arcu dapibus, rhoncus nulla vel, malesuada turpis. Nam congue convallis eros non luctus. Etiam suscipit malesuada risus, nec semper massa aliquet at. Ut venenatis consequat dapibus.</p>
                 <section class="saladeCrevette">
                     <img class="recette" src="foodiesImg/articleRecette_1-assets/photo-480.jpg" alt="">
-                    <h4>Salade de crevettes de saison</h4>
-                    <p>Eleifend sit amet ipsum quis, aliquam luctus neque. In vitae justo ut risus volutpat accumsan sed nec est. Nunc leo arcu, porttitor eget turpis ac, consequat porttitor risus. Mauris porttitor tristique eros, non dictum purus aliquet nec.</p>
-                    <a href="#"><p>Consulter la recette</p></a>
+                    <div>
+                        <h4>Salade de crevettes de saison</h4>
+                        <p>Eleifend sit amet ipsum quis, aliquam luctus neque. In vitae justo ut risus volutpat accumsan sed nec est. Nunc leo arcu, porttitor eget turpis ac, consequat porttitor risus. Mauris porttitor tristique eros, non dictum purus aliquet nec.</p>
+                        <a href="#"><p>Consulter la recette</p></a>
+                    </div>
                 </section>
                 <section class="saladeTomate">
                     <img class="recette" src="foodiesImg/articleRecette_2-assets/photo-480.jpg" alt="">
+                    <div>
                     <h4>Une salade de tomates fraîches</h4>
                     <p>Porta vitae magna eget, vestibulum molestie lacus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                     <p>Cras laoreet sagittis risus, eu luctus nibh accumsan sed. Nunc neque nisl, imperdiet nec nibh quis, luctus luctus sem. Suspendisse gravida ipsum eu velit pharetra, non suscipit ipsum dignissim. In aliquam maximus nisl, a commodo ipsum dictum ut. Etiam placerat, nisi vel facilisis dapibus, nisl sapien pellentesque velit, sit amet gravida est dolor aliquam lectus.</p>
                     <a href="#"><p>Consulter la recette</p></a>
+                    </div>
                 </section>
                 <section class="sandwich">
                     <img class="recette" src="foodiesImg/articleRecette_3-assets/photo-480.jpg" alt="">
-                    <h4>De petits sandwichs tout simples</h4>
-                    <p>Eleifend sit amet ipsum quis, aliquam luctus neque. In vitae justo ut risus volutpat accumsan sed nec est. Nunc leo arcu, porttitor eget turpis ac, consequat porttitor risus. Mauris porttitor tristique eros, non dictum purus aliquet nec.</p>
-                    <a href="#"><p>Consulter la recette</p></a>
+                    <div>
+                        <h4>De petits sandwichs tout simples</h4>
+                        <p>Eleifend sit amet ipsum quis, aliquam luctus neque. In vitae justo ut risus volutpat accumsan sed nec est. Nunc leo arcu, porttitor eget turpis ac, consequat porttitor risus. Mauris porttitor tristique eros, non dictum purus aliquet nec.</p>
+                        <a href="#"><p>Consulter la recette</p></a>
+                    </div>
                 </section>
             </article>
         </section>
@@ -119,7 +127,10 @@
        $('.menuMobile').on('click', function(){
             $('nav').toggleClass('nav-principale-open');
         });
+    
    });
+
+   
 </script>
 </body>
 </html>
